# fcrypt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  crypto.rs  error.rs  file_ops.rs  lib.rs  main.rs  overwrite.rs  pathing.rs  progress.rs  prompt.rs
tests/: integration.rs
